# ET-partition

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CN.md  pyproject.toml  requirements.txt
PP/: main.py
Test_Site/: processing_summary.txt
TransEstimAlgo/: TEA_batch.py  TEA模型批量处理代码文档.md  self_modified.py  tutorial.ipynb
TransEstimAlgo/TEA/: TEA.py
analysis/: __init__.py  comparison.py  simulation.py  visualization.py
docs/: partition_methods_math.md
ecosystem-transpiration-v1.1/: BerkeleyConversion.json  FI-Hyy_uWUE_output.csv  FI-Hyy_uWUE_output.nc  preprocess.py
examples/: README.md  basic_usage.py
methods/: __init__.py
methods/perez_priego/: README.md  __init__.py  batch.py  et_partitioning_functions.py  main_debug.py
methods/tea/: README.md  __init__.py  batch.py
methods/tea/TEA/: PreProc.py  TEA.py  __init__.py
methods/uwue/: README.md  __init__.py  batch.py
tests/: __init__.py  test_all_methods.py
tests/analysis/: test_pft_sensitivity.py  test_simulation.py
uWUE/: Zhou_tutorial.ipynb  self_modify_version.py  uWUE 模型批量处理代码文档.md  uwue_batch.py
